Finalized JWT! Now, all that is (hopefully) left to do is apply it to my website

--- a/ProjetoC#/appsettings.json
+++ b/ProjetoC#/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Appsettings": {
+    "Token":  "minha senha muito muito secreta"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
