Login/registration process complete
Added feature where the user can now log-in (still through the swagger) and it returns the normal token, however, if the user misses his password or his email, it returns him a badRequest.

--- a/ProjetoC#/appsettings.json
+++ b/ProjetoC#/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "minha senha muito muito secreta"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
