Added databases to the mix!
In the previous file, due to a git mistake I made, the actual file with databases included didn't come through. Here's the updated ones!

--- a/ProjetoC#/appsettings.json
+++ b/ProjetoC#/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "minha senha muito muito secreta"
+    "Token": "hoje não! kkkkkkk!"
   },
   "Logging": {
     "LogLevel": {
