Fixed token issue
Fixed issue where the login token was not being sent as a JSON object, thus causing login failure to occur

--- a/ProjetoC#/appsettings.json
+++ b/ProjetoC#/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "hoje não! kkkkkkk!"
+    "Token": "Meu nome é rakoski, mateus rakoski"
   },
   "Logging": {
     "LogLevel": {
