Finalized ethereal email service
Now, all that's left to do is add an actual body for the message with a link that redirects a user for changing their password, as well as changing from ethereal email to gmail.

--- a/ProjetoC#/appsettings.json
+++ b/ProjetoC#/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "EmailHost": "smtp.ethereal.email",
+  "EmailUserName": "king.wehner27@ethereal.email",
+  "EmailPassword": "q2QBTKkSRz3R7w92XQ",
   "AppSettings": {
     "Token": "Meu nome é rakoski, mateus rakoski"
   },
