--- a/ProjetoC#/ProjetoC#.csproj
+++ b/ProjetoC#/ProjetoC#.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\EmailDto.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Servicos\EmailService\EmailDto.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.18" />
     <PackageReference Include="MimeKit" Version="4.1.0" />
     <PackageReference Include="MySql.Data" Version="8.0.33" />
