--- a/ProjetoC#/appsettings.json
+++ b/ProjetoC#/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "Meu nome é rakoski, mateus rakoski"
+    "Token": "*******"
   },
   "Logging": {
     "LogLevel": {
