--- a/ProjetoC#/appsettings.json
+++ b/ProjetoC#/appsettings.json
@@ -1,9 +1,9 @@
 {
   "EmailHost": "smtp.ethereal.email",
   "EmailUserName": "king.wehner27@ethereal.email",
-  "EmailPassword": "q2QBTKkSRz3R7w92XQ",
+  "EmailPassword": "********",
   "AppSettings": {
-    "Token": "Meu nome é rakoski, mateus rakoski"
+    "Token": "*********"
   },
   "Logging": {
     "LogLevel": {
